[package]
name = "code"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
derive = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
http = { workspace = true }
